added deployment steps

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rovr AI Chatbot</title>
-    <meta name="description" content="AI Chatbot for Insurance Underwriting Assistance" />
+    <title>Corporate Card AI</title>
+    <meta name="description" content="AI Assistant for BMO Corporate Card Support" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Rovr AI Chatbot" />
-    <meta property="og:description" content="AI Chatbot for Insurance Underwriting Assistance" />
+    <meta property="og:title" content="Corporate Card AI" />
+    <meta property="og:description" content="AI Assistant for BMO Corporate Card Support" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
